--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"@fluent/langneg": "^0.7.0",
 		"accept-language-parser": "^1.5.0",
 		"jsdom": "^22.1.0",
+		"lemmy-js-client": "^0.17.2-rc.24",
 		"svelte-kit-cookie-session": "^3.4.1"
 	}
 }
