--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	},
 	"devDependencies": {
 		"@nubolab-ffwd/svelte-fluent": "^0.6.1",
+		"@steeze-ui/heroicons": "^2.2.2",
 		"@sveltejs/adapter-node": "^1.2.4",
 		"@sveltejs/kit": "^1.5.0",
 		"@types/accept-language-parser": "^1.5.3",
@@ -23,6 +24,7 @@
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.26.0",
+		"postcss-nesting": "^11.2.2",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
 		"prettier-plugin-tailwindcss": "^0.3.0",
@@ -37,9 +39,11 @@
 	"dependencies": {
 		"@fluent/bundle": "^0.18.0",
 		"@fluent/langneg": "^0.7.0",
+		"@steeze-ui/svelte-icon": "^1.3.2",
 		"accept-language-parser": "^1.5.0",
 		"jsdom": "^22.1.0",
 		"lemmy-js-client": "^0.17.2-rc.24",
+		"markdown-it": "^13.0.1",
 		"svelte-kit-cookie-session": "^3.4.1"
 	}
 }
