--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,7 @@
-# See https://kit.svelte.dev/docs/adapter-node#environment-variables for environment
-# variable info. Make sure to prefix these with SRV_
-
-# SRV_HOST=
-# SRV_PORT=
-
-# Guaranteed to be secure
-SECRET=hunter2
-
 # Default language. See src/lib/languages for a list of available languages.
 UI_DEFAULT_LANGUAGE=en
 
-# Default theme. Overridable by the user
+# Default theme. Overrideable by the user
 UI_DEFAULT_THEME_PRIMARY=sky # Choices: rose, emerald, sky, purple
 UI_DEFAULT_THEME_NEUTRAL=slate # Choices: slate, stone
 
@@ -19,3 +10,22 @@ UI_DEFAULT_THEME_DARK=1 # 1 or 0
 
 # Should dark mode automatically adapt based on the visitor's system?
 UI_DEFAULT_THEME_DARK_AUTO=1 # 1 or 0
+
+# Node server only #############################################################
+# See https://kit.svelte.dev/docs/adapter-node#environment-variables for environment
+# variable info. Make sure to prefix all those with SRV_
+
+# SRV_HOST=
+# SRV_PORT=
+# etc ...
+
+# Chosen carefully to be secure.
+# No, really. Change this. Use a password manager or something to generate something random.
+SECRET=hunter2
+
+# The instance to browse when logged out.
+DEFAULT_INSTANCE=lemmy.ml
+
+# Allow users to log into their accounts on other instances. Just in case
+# federation wasn't confusing enough.
+ALLOW_LOGINS_TO_OTHER_INSTANCES=0 # 1 or 0
