--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
 	"private": true,
 	"type": "module",
 	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview",
+		"dev": "VITE_BUILD_MODE=node vite dev",
+		"dev:spa": "VITE_BUILD_MODE=spa vite dev",
+		"build:node": "VITE_BUILD_MODE=node vite build",
+		"build:spa": "VITE_BUILD_MODE=spa vite build",
+		"preview:node": "VITE_BUILD_MODE=node vite preview",
+		"preview:spa": "VITE_BUILD_MODE=spa vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
@@ -16,6 +19,7 @@
 		"@nubolab-ffwd/svelte-fluent": "^0.6.1",
 		"@steeze-ui/heroicons": "^2.2.2",
 		"@sveltejs/adapter-node": "^1.2.4",
+		"@sveltejs/adapter-static": "^2.0.2",
 		"@sveltejs/kit": "^1.5.0",
 		"@types/accept-language-parser": "^1.5.3",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
