--- a/package.json
+++ b/package.json
@@ -47,7 +47,6 @@
 		"accept-language-parser": "^1.5.0",
 		"jsdom": "^22.1.0",
 		"lemmy-js-client": "^0.17.2-rc.24",
-		"markdown-it": "^13.0.1",
-		"svelte-kit-cookie-session": "^3.4.1"
+		"markdown-it": "^13.0.1"
 	}
 }
