hybrid buildsystem part 2 (SPA still does not work yet)
SPA still tries to request __data.json for whatever reason

--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
 	"private": true,
 	"type": "module",
 	"scripts": {
-		"dev": "VITE_BUILD_MODE=node vite dev",
-		"dev:spa": "VITE_BUILD_MODE=spa vite dev",
-		"build:node": "VITE_BUILD_MODE=node vite build",
-		"build:spa": "VITE_BUILD_MODE=spa vite build",
-		"preview:node": "VITE_BUILD_MODE=node vite preview",
-		"preview:spa": "VITE_BUILD_MODE=spa vite preview",
+		"dev": "VITE_BUILD_MODE=node UI_BUILD_MODE=node vite dev",
+		"dev:spa": "VITE_BUILD_MODE=spa UI_BUILD_MODE=spa vite dev",
+		"build:node": "VITE_BUILD_MODE=node UI_BUILD_MODE=node vite build",
+		"build:spa": "VITE_BUILD_MODE=spa UI_BUILD_MODE=spa vite build",
+		"preview:node": "VITE_BUILD_MODE=node UI_BUILD_MODE=node vite preview",
+		"preview:spa": "VITE_BUILD_MODE=spa UI_BUILD_MODE=spa vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
