Slight re-architecturing

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,12 @@
 # Default language. See src/lib/languages for a list of available languages.
+# This is more of a fallback than a default. If an appropriate language can be 
+# negotiated based on the visitor's browser settings, that will be picked instead.
 UI_DEFAULT_LANGUAGE=en
 
-# Default theme. Overrideable by the user
-UI_DEFAULT_THEME_PRIMARY=sky # Choices: rose, emerald, sky, purple
-UI_DEFAULT_THEME_NEUTRAL=slate # Choices: slate, stone
+# Default theme. Overrideable by the visitor.
+# See tailwind.config.js for all options.
+UI_DEFAULT_THEME_PRIMARY=sky
+UI_DEFAULT_THEME_NEUTRAL=slate
 
 # Should dark mode be enabled by default?
 UI_DEFAULT_THEME_DARK=1 # 1 or 0
@@ -18,10 +21,6 @@ UI_DEFAULT_THEME_DARK_AUTO=1 # 1 or 0
 # SRV_HOST=
 # SRV_PORT=
 # etc ...
-
-# Chosen carefully to be secure.
-# No, really. Change this. Use a password manager or something to generate something random.
-SECRET=hunter2
 
 # The instance to browse when logged out.
 DEFAULT_INSTANCE=lemmy.ml
