--- a/package.json
+++ b/package.json
@@ -4,12 +4,10 @@
 	"private": true,
 	"type": "module",
 	"scripts": {
-		"dev": "VITE_BUILD_MODE=node UI_BUILD_MODE=node vite dev",
-		"dev:spa": "VITE_BUILD_MODE=spa UI_BUILD_MODE=spa vite dev",
+		"dev": "VITE_BUILD_MODE=node UI_BUILD_MODE=node NODE_ENV=development vite dev",
 		"build:node": "VITE_BUILD_MODE=node UI_BUILD_MODE=node vite build",
 		"build:spa": "VITE_BUILD_MODE=spa UI_BUILD_MODE=spa vite build",
-		"preview:node": "VITE_BUILD_MODE=node UI_BUILD_MODE=node vite preview",
-		"preview:spa": "VITE_BUILD_MODE=spa UI_BUILD_MODE=spa vite preview",
+		"preview": "VITE_BUILD_MODE=node UI_BUILD_MODE=node vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
@@ -21,6 +19,8 @@
 		"@sveltejs/adapter-node": "^1.2.4",
 		"@sveltejs/adapter-static": "^2.0.2",
 		"@sveltejs/kit": "^1.5.0",
+		"@tailwindcss/forms": "^0.5.3",
+		"@tailwindcss/typography": "^0.5.9",
 		"@types/accept-language-parser": "^1.5.3",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
@@ -45,6 +45,7 @@
 		"@fluent/langneg": "^0.7.0",
 		"@steeze-ui/svelte-icon": "^1.3.2",
 		"accept-language-parser": "^1.5.0",
+		"dotenv": "^16.1.4",
 		"jsdom": "^22.1.0",
 		"lemmy-js-client": "^0.17.2-rc.24",
 		"markdown-it": "^13.0.1"
