--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
 		"accept-language-parser": "^1.5.0",
 		"dotenv": "^16.1.4",
 		"jsdom": "^22.1.0",
-		"lemmy-js-client": "^0.17.2-rc.24",
+		"lemmy-js-client": "github:ShittyKopper/lemmy-js-client#custom-fetch",
 		"markdown-it": "^13.0.1"
 	}
 }
