--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,13 @@ UI_DEFAULT_THEME_DARK=1 # 1 or 0
 # Should dark mode automatically adapt based on the visitor's system?
 UI_DEFAULT_THEME_DARK_AUTO=1 # 1 or 0
 
+# The instance to browse when logged out.
+UI_DEFAULT_INSTANCE=https://lemmy.ml
+
+# Allow users to log into their accounts on other instances. Just in case
+# federation wasn't confusing enough.
+UI_ALLOW_LOGINS_TO_OTHER_INSTANCES=0 # 1 or 0
+
 # Node server only #############################################################
 # See https://kit.svelte.dev/docs/adapter-node#environment-variables for environment
 # variable info. Make sure to prefix all those with SRV_
@@ -21,10 +28,3 @@ UI_DEFAULT_THEME_DARK_AUTO=1 # 1 or 0
 # SRV_HOST=
 # SRV_PORT=
 # etc ...
-
-# The instance to browse when logged out.
-DEFAULT_INSTANCE=lemmy.ml
-
-# Allow users to log into their accounts on other instances. Just in case
-# federation wasn't confusing enough.
-ALLOW_LOGINS_TO_OTHER_INSTANCES=0 # 1 or 0
