Cache anonymous requests

--- a/.env.example
+++ b/.env.example
@@ -28,3 +28,14 @@ UI_ALLOW_LOGINS_TO_OTHER_INSTANCES=0 # 1 or 0
 # SRV_HOST=
 # SRV_PORT=
 # etc ...
+
+# If your Lemmy API and Lemmik are running on the same machine, you can use this
+# to bypass any reverse proxies and talk directly to the API
+#NS_DEFAULT_INSTANCE_SERVERSIDE=http://localhost:8536
+
+# Anonymous requests are cached to lessen the load on the Lemmy API. This is the
+# maximum number of requests that can be cached.
+NS_LRU_CACHE_SIZE=200
+
+# How long should a request stay on cache before being dropped?
+NS_LRU_CACHE_TTL=300000 # milliseconds
