--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
 		"@tailwindcss/forms": "^0.5.3",
 		"@tailwindcss/typography": "^0.5.9",
 		"@types/accept-language-parser": "^1.5.3",
+		"@types/markdown-it": "^12.2.3",
+		"@types/markdown-it-container": "^2.0.5",
+		"@types/markdown-it-emoji": "^2.0.2",
+		"@types/markdown-it-footnote": "^3.0.0",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"autoprefixer": "^10.4.14",
@@ -45,10 +49,17 @@
 		"@fluent/langneg": "^0.7.0",
 		"@steeze-ui/svelte-icon": "^1.3.2",
 		"accept-language-parser": "^1.5.0",
+		"date-fns": "^2.30.0",
 		"dotenv": "^16.1.4",
 		"jsdom": "^22.1.0",
 		"lemmy-js-client": "github:ShittyKopper/lemmy-js-client#custom-fetch",
 		"lru-cache": "^9.1.2",
-		"markdown-it": "^13.0.1"
+		"markdown-it": "^13.0.1",
+		"markdown-it-container": "^3.0.0",
+		"markdown-it-emoji": "^2.0.2",
+		"markdown-it-footnote": "^3.0.3",
+		"markdown-it-html5-embed": "^0.3.3",
+		"markdown-it-sub": "^1.0.0",
+		"markdown-it-sup": "^1.0.0"
 	}
 }
